Select tab foreground colors using expected opacity

Some themes were showing tab text with insufficient contrast
because the tab background was rendered more like the active
state than inactive state (e.g. when selected or hovered).
To ensure sufficient contrast, the expected render opacity
and tab background color are used to decide on title text
color, as well as to generate button and icon colors.

Bug: 883257
Change-Id: I67398132d13fd9e401e4165347bffe35ac6e506d
Reviewed-on: https://chromium-review.googlesource.com/1227215
Commit-Queue: Orin Jaworski <orinj@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591873}
Former-commit-id: 1adfd6531bf33724c15b31e77a406e8e850c55d8